force-app/main/default/objects/Tax_Rule__mdt/Tax_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Tax Rule</label>
    <pluralLabel>Tax Rules</pluralLabel>
</CustomObject>