force-app/main/default/objects/Tax_Rule__mdt/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <label>Default Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>