force-app/main/default/objects/Tax_Rule__mdt/fields/HSN_Code_Pattern__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code_Pattern__c</fullName>
    <label>HSN Code Pattern</label>
    <length>20</length>
    <type>Text</type>
</CustomField>