force-app/main/default/objects/Tax_Rule__mdt/fields/IGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate__c</fullName>
    <label>IGST Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>