force-app/main/default/objects/Tax_Rule__mdt/fields/SGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>SGST_Rate__c</fullName>
    <label>SGST Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>